<resources>
    <string name="app_name">MemoryGame</string>
    <string name="title_game">Game</string>
    <string name="title_scoreboard">Scoreboard</string>
    <string name="title_infos">Infos</string>
    <string name="tutorial_background" translatable="false">tutorial_background</string>
    <string name="next"><u>Next</u></string>
    <string name="match_the_cards">Match the cards!</string>
    <string name="save_your_score">Save your score!</string>
    <string name="get_the_code_for_free">Get the code for free!</string>
    <string name="finish"><u>Finish</u></string>
    <string name="back"><u>Back</u></string>
    <string name="memorygame_icon" translatable="false">MemoryGame_icon</string>
    <string name="card" translatable="false">card</string>
    <string name="audio_mode" translatable="false">audioAction</string>
    <string name="save_score">Save Score</string>
    <string name="new_game">New Game</string>
    <string name="invalid_move">Invalid move!</string>
    <string name="player_name">Player Name</string>
    <string name="time">Time =</string>
    <string name="error">Error =</string>
    <string name="score">Score =</string>
    <string name="savecup">savecup</string>
    <string name="playernametoolong">Player name too long!</string>
    <string name="insertplayername">Please insert player name!</string>
    <string name="scoresaved">Score saved!</string>
</resources>