<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/splashFragment">

    <fragment
        android:id="@+id/navigation_game"
        android:name="com.mrlp.memorygame.ui.game.GameFragment"
        android:label="@string/title_game"
        tools:layout="@layout/fragment_game" />

    <fragment
        android:id="@+id/navigation_scoreboard"
        android:name="com.mrlp.memorygame.ui.dashboard.ScoreboardFragment"
        android:label="@string/title_scoreboard"
        tools:layout="@layout/fragment_scoreboard" />

    <fragment
        android:id="@+id/navigation_info"
        android:name="com.mrlp.memorygame.ui.info.InfosFragment"
        android:label="@string/title_infos"
        tools:layout="@layout/fragment_infos" />
    <fragment
        android:id="@+id/splashFragment"
        android:name="com.mrlp.memorygame.ui.splash.SplashFragment"
        android:label="fragment_splash"
        tools:layout="@layout/fragment_splash" >
        <action
            android:id="@+id/action_splashFragment_to_tutorialFragment"
            app:destination="@id/tutorialFragment"
            app:enterAnim="@anim/nav_default_pop_enter_anim"
            app:exitAnim="@anim/nav_default_pop_exit_anim"
            app:popUpTo="@id/splashFragment"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_splashFragment_to_navigation_game2"
            app:destination="@id/navigation_game"
            app:enterAnim="@anim/nav_default_pop_enter_anim"
            app:exitAnim="@anim/nav_default_pop_exit_anim"
            app:popUpTo="@id/splashFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/tutorialFragment"
        android:name="com.mrlp.memorygame.ui.tutorial.TutorialFragment"
        android:label="fragment_tutorial"
        tools:layout="@layout/fragment_tutorial" >
        <action
            android:id="@+id/action_tutorialFragment_to_navigation_game"
            app:destination="@id/navigation_game"
            app:enterAnim="@anim/nav_default_pop_enter_anim"
            app:exitAnim="@anim/nav_default_pop_exit_anim"
            app:popUpTo="@id/tutorialFragment"
            app:popUpToInclusive="true" />
    </fragment>
</navigation>